--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.43.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
