--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@tippyjs/react": "^4.2.6",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "swiper": "^9.1.0",
+    "tippy.js": "^6.3.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
