--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
+    "react-icons": "^4.11.0",
+    "react-intl": "^6.4.6",
     "react-loading-skeleton": "^3.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
